--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 
 /* Top Header */
 #top-header {
-  padding: 30px 0;
+  padding-top: 30px;
   text-align: center;
   position: relative;
   z-index: 2;
