--- a/partials/header.html
+++ b/partials/header.html
@@ -1,4 +1,4 @@
-<!-- No DOCTYPE, HTML, HEAD, or BODY tags here! -->
+
 <header id="top-header">
   <div class="logo">
     <a href="./index.html">
@@ -26,99 +26,38 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item dropdown">
+        <ul class="navbar-nav mx-auto mb-2 mb-md-0">
+          <li class="nav-item">
             <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
+              class="nav-link text-bs-dark fw-bold px-2"
+              aria-current="page"
+              href="./index.html"
+              >Home</a
             >
-              SERVICES
-            </a>
-            <ul class="dropdown-menu">
-              <li>
-                <a class="dropdown-item" href="./services.html#asic-fpga-design"
-                  >ASIC and FPGA Design</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="./services.html#sw-hw-codesign"
-                  >SW-HW Co-design</a
-                >
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  href="./services.html#digital-verification"
-                  >Digital Verification</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="./services.html#embedded-sw"
-                  >Embedded SW</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="./services.html#sw-consulting"
-                  >SW Consulting</a
-                >
-              </li>
-            </ul>
           </li>
-
-          <li class="nav-item dropdown">
+          <li class="nav-item">
             <a
-              class="nav-link dropdown-toggle"
-              href="./products.html"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              PRODUCTS
-            </a>
-            <ul class="dropdown-menu">
-              <li>
-                <a class="dropdown-item" href="./products.html#gen-accel"
-                  >Gen-accel</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="./products.html#fpga-nanaccel"
-                  >FPGA NaNAccel</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="./products.html#support"
-                  >Support</a
-                >
-              </li>
-            </ul>
-          </li>
-
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
+              class="nav-link text-bs-dark fw-bold px-2"
+              aria-current="page"
               href="./company.html"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
+              >Company</a
             >
-              COMPANY
-            </a>
-            <ul class="dropdown-menu">
-              <li>
-                <a class="dropdown-item" href="./company.html#about"
-                  >About NaN Tech Solutions BV</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="./company.html#vision">Vision</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="./company.html#team"
-                  >Core Team</a
-                >
-              </li>
-            </ul>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link text-bs-dark fw-bold px-2"
+              aria-current="page"
+              href="./products.html"
+              >Products</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link text-bs-dark fw-bold px-2"
+              aria-current="page"
+              href="./services.html"
+              >Services</a
+            >
           </li>
         </ul>
       </div>
